# tapewarm

./: .gitignore  CMakeLists.txt  README.md  TapeWarm.jucer  USAGE.md
Builds/MacOSX/: Info-AU.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/TapeWarm.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h  include_juce_audio_basics.mm  include_juce_audio_devices.mm  include_juce_audio_formats.mm  include_juce_audio_plugin_client_VST3.mm  include_juce_audio_processors.mm  include_juce_audio_utils.mm  include_juce_core.mm  include_juce_data_structures.mm  include_juce_dsp.mm  include_juce_events.mm  include_juce_graphics.mm  include_juce_gui_basics.mm  include_juce_gui_extra.mm
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DSPUtils.h  TapeProcessor.cpp  TapeProcessor.h
